Revamped architecture and build process

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,40 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(gdb) Valgrind",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "valgrind",
-            "args": [
-                "--leak-check=full", "--show-leak-kinds=all",  
-                "${command:cmake.launchTargetPath}", "../resources/test.png"
-            ],
-            "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                },
-                {
-                    "description": "Set Disassembly Flavor to Intel",
-                    "text": "-gdb-set disassembly-flavor intel",
-                    "ignoreFailures": true
-                }
-            ]
-        },
-        {
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
             "program": "${command:cmake.launchTargetPath}",
             "args": ["../resources/test.png"],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}/build",
+            "cwd": "${workspaceFolder}/build/",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
