--- a/cli/meson.build
+++ b/cli/meson.build
@@ -1,7 +1,7 @@
 test_srcs = ['main.cpp']
 
 executable(
-  'ivmg_test',
+  'ivmg-cli',
   test_srcs,
   include_directories: include_directories('.', '../include'),
   link_with: ivmg_lib,
