--- a/meson.build
+++ b/meson.build
@@ -3,6 +3,6 @@ project('Imavromage', 'cpp', version: '0.0.1', default_options: ['cpp_std=c++23'
 zlib_dep = dependency('zlib', required: true)
 
 subdir('src')
-subdir('test')
+subdir('cli')
 
 install_subdir('include', install_dir: get_option('includedir'))
