--- a/cli/meson.build
+++ b/cli/meson.build
@@ -1,6 +1,6 @@
 test_srcs = ['main.cpp']
 
-executable(
+ivmg_cli = executable(
   'ivmg-cli',
   test_srcs,
   include_directories: include_directories('.', '../include'),
