--- a/meson.build
+++ b/meson.build
@@ -4,5 +4,6 @@ zlib_dep = dependency('zlib', required: true)
 
 subdir('src')
 subdir('cli')
+subdir('tests')
 
 install_subdir('include', install_dir: get_option('includedir'))
