PNG dec: Fixed NONE filter for RGB color type

--- a/src/meson.build
+++ b/src/meson.build
@@ -7,5 +7,5 @@ ivmg_lib = library(
   dependencies: [zlib_dep],
   install: true,
   version: meson.project_version(),
-  cpp_args: get_option('buildtype') == 'debug' ? ['-DDEBUG'] : [],
+  cpp_args: get_option('buildtype') == 'debug' ? ['-DDEBUG'] : ['-O3'],
 )
