--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,7 @@
 project('Imavromage', 'cpp', version: '0.0.1', default_options: ['cpp_std=c++23'])
 
 zlib_dep = dependency('zlib', required: true)
+def_dep = dependency('libdeflate', required: true)
 
 subdir('src')
 subdir('cli')
