--- a/src/meson.build
+++ b/src/meson.build
@@ -3,16 +3,16 @@ src_files = [
   'codecs/pam.cpp', 
   'codecs/png.cpp', 
   'codecs/qoi.cpp', 
-  'convolution.cpp',
-  'ComputeContext.cpp',
+  'core/features.cpp',
+  'core/image.cpp'
 ]
 
 ivmg_lib = library(
   'ivmg',
   sources: src_files,
   include_directories: include_directories('.', 'codecs', '../include'),
-  dependencies: [zlib_dep, def_dep],
+  dependencies: [def_dep],
   install: true,
   version: meson.project_version(),
-  cpp_args: get_option('buildtype') == 'debug' ? ['-DDEBUG'] : ['-O3', '-march=native'],
+  cpp_args: get_option('buildtype') == 'debug' ? ['-DDEBUG', '-march=native'] : ['-O3', '-march=native'],
 )
